# mysaas

./: .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.saas  MakeFile  Makefile  docker-compose.yml  pyproject.toml
bot/: conf.py  handlers.py  keyboards.py  main.py
bot/http_client/: __init__.py  _async.py  _base.py  _sync.py  exceptions.py
bot/saas/: __init__.py  client.py  models.py
saas/project/: settings.py  urls.py
saas/tariff/: __init__.py  models.py
saas/tariff/migrations/: 0001_initial.py  0002_alter_tarifflimit_code.py  0003_add_initial_tariffs.py
saas/tests/api/: conftest.py  test_users.py
saas/users/: models.py  serializers.py  urls.py  views.py
saas/users/migrations/: 0001_initial.py  0002_alter_user_tariff.py
saas/utils/: permissions.py
